--- a/gencode.html
+++ b/gencode.html
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="col-2"></div>
             <div class="col-8 mt-5">
-                <form id="userPost" onsubmit="registerUser(); return false" >
+                <form  onsubmit="return false" >
                     <div class="form-row">
                       <div class="form-group col-md-6 mt-5">
                         <label for="inputEmail4">Email</label>
@@ -21,11 +21,11 @@
                       </div>
                       <div class="form-group col-md-6 mt-5">
                         <label for="inputDob">Date of birth</label>
-                        <input type="text" class="form-control" required maxlength="10" id="inputDob">
+                        <input type="text" class="form-control" placeholder="dd/mm/yyyy" required maxlength="10" id="inputDob">
                       </div>
                       <button type="submit" class="btn btn-primary" id="usersubmit">send 6 digits code</button>
                     </form>
-                    <form class="col-12" action="./resetpassword.html" onsubmit="">
+                    <form class="col-12" onsubmit="verifycode(); return false;">
                         <div class="row">
                          <div class="col-3"></div>
                          <div class="col-6">
@@ -33,7 +33,7 @@
                               <label for="inputcode">Enter OTP</label>
                               <input type="text" class="form-control" required maxlength="6" id="inputcode">
                             </div>
-                            <button type="submit" class="btn btn-primary" id="usersubmit">send 6 digits code</button>
+                            <button type="submit" class="btn btn-primary" id="usersubmit">verify code</button>
                          </div>
                          <div class="col-6"></div>
                         </div>
