--- a/register.html
+++ b/register.html
@@ -28,7 +28,7 @@
                       </div>
                       <div class="form-group col-md-6 mt-5">
                         <label for="inputDob">Date of birth</label>
-                        <input type="text" class="form-control" required maxlength="10" id="inputDob">
+                        <input type="text" class="form-control" placeholder="dd/mm/yyyy" required maxlength="10" id="inputDob">
                       </div>
                       <div class="form-group col-md-6 mt-5">
                         <label for="inputEmail4">Email</label>
