--- a/resetpassword.html
+++ b/resetpassword.html
@@ -16,11 +16,11 @@
                 <form id="userPost" onsubmit="registerUser(); return false" >
                         <div class="form-group col-md-12 mt-5">
                           <label for="inputPassword4">New Password</label>
-                          <input type="password" class="form-control"  required minlength="6" id="inputPassword4">
+                          <input type="password" class="form-control"  required minlength="6" id="newpassword">
                         </div>
                         <div class="form-group col-md-12 mt-5">
                           <label for="inputPassword5">Conform Password</label>
-                          <input type="password" class="form-control"  required minlength="6" id="inputPassword5">
+                          <input type="password" class="form-control"  required minlength="6" id="conformpassword">
                         </div>
                         <button type="submit" class="btn btn-primary" id="usersubmit">Reset Password</button>
                       </form>
