--- a/resetpassword.html
+++ b/resetpassword.html
@@ -6,14 +6,24 @@
     <title>Document</title>
         <!-- CSS only -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
+<style>
+  body{
+    background-image: url("./images/login-bg.jpg");
+  }
+  #userPost{
+    color: grey;
+-webkit-box-shadow: 0px 3px 36px -3px rgba(23, 50, 170, 0.75);
+-moz-box-shadow: 0px 3px 36px -3px rgba(23, 50, 170, 0.75);
+box-shadow: 0px 3px 36px -3px rgba(23, 50, 170, 0.75);
+}
+</style>
 </head>
 <body>
     <div class="container">
         <div class="row">
             <div class="col-2"></div>
-            <div class="col-8 mt-5">
-                <form id="userPost" onsubmit="registerUser(); return false" >
+            <div class="col-8 mt-5 p-5" id="userPost">
+                <form  onsubmit="registerUser(); return false" >
                         <div class="form-group col-md-12 mt-5">
                           <label for="inputPassword4">New Password</label>
                           <input type="password" class="form-control"  required minlength="6" id="newpassword">
