--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
    body{
     font-size: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-image:url(./images/login-bg1.jpg);
+    background-image:url(./images/login-bg.jpg);
   color: white;
   }
 </style>
