register.js changed

--- a/register.html
+++ b/register.html
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="col-2"></div>
             <div class="col-8 mt-5">
-                <form id="userPost" onsubmit="registerUser(); return registerUser()" >
+                <form id="userPost" onsubmit="registerUser(); return false" >
                     <div class="form-row">
                       <div class="form-group col-md-6 mt-5">
                         <label for="inputName">Full Name</label>
