--- a/gencode.html
+++ b/gencode.html
@@ -23,7 +23,7 @@ box-shadow: 0px 3px 36px -3px rgba(23, 50, 170, 0.75);
         <div class="row">
             <div class="col-2"></div>
             <div class="col-8 mt-5">
-                <form id="form1" onsubmit=" genaretecode(); return false" >
+                <form id="form1">
                     <div class="form-row">
                       <div class="form-group col-md-6 mt-5">
                         <label for="inputEmail4">Email</label>
@@ -39,7 +39,7 @@ box-shadow: 0px 3px 36px -3px rgba(23, 50, 170, 0.75);
                     <div class="row">
                       <div class="col-2"></div>
                       <div class="col-8">
-                          <form id="form2" class=" mt-5  p-4 col-12" onsubmit=" verifycode();  return false">
+                          <form id="form2" class=" mt-5  p-4 col-12">
                       
                           <div class="form-group mt-5 ml-0">
                               <label for="inputcode">Enter OTP</label>
