--- a/resetpassword.html
+++ b/resetpassword.html
@@ -32,7 +32,7 @@ box-shadow: 0px 3px 36px -3px rgba(23, 50, 170, 0.75);
                           <label for="inputPassword5">Conform Password</label>
                           <input type="password" class="form-control"  required minlength="6" id="conformpassword">
                         </div>
-                        <button type="submit" class="btn btn-primary" id="passwordsubmit">Reset Password</button>
+                        <button type="submit" class="btn btn-primary" id="passwordSubmit">Reset Password</button>
                       </form>
                   
             </div>
