--- a/resetpassword.html
+++ b/resetpassword.html
@@ -25,11 +25,11 @@ box-shadow: 0px 3px 36px -3px rgba(23, 50, 170, 0.75);
             <div class="col-8 mt-5 p-5" id="userPost">
                 <form >
                         <div class="form-group col-md-12 mt-5">
-                          <label for="inputPassword4">New Password</label>
+                          <label for="newpassword">New Password</label>
                           <input type="password" class="form-control"  required minlength="6" id="newpassword">
                         </div>
                         <div class="form-group col-md-12 mt-5">
-                          <label for="inputPassword5">Conform Password</label>
+                          <label for="conformpassword">Conform Password</label>
                           <input type="password" class="form-control"  required minlength="6" id="conformpassword">
                         </div>
                         <button type="submit" class="btn btn-primary" id="passwordSubmit">Reset Password</button>
