--- a/resetpassword.html
+++ b/resetpassword.html
@@ -26,7 +26,7 @@ box-shadow: 0px 3px 36px -3px rgba(23, 50, 170, 0.75);
                 <form >
                         <div class="form-group col-md-12 mt-5">
                           <label for="newpassword">New Password</label>
-                          <input type="password" class="form-control"  required minlength="6" id="newpassword">
+                          <input type="text" class="form-control"  required minlength="6" id="newpassword">
                         </div>
                         <div class="form-group col-md-12 mt-5">
                           <label for="conformpassword">Conform Password</label>
