--- a/resetpassword.html
+++ b/resetpassword.html
@@ -30,7 +30,7 @@ box-shadow: 0px 3px 36px -3px rgba(23, 50, 170, 0.75);
                         </div>
                         <div class="form-group col-md-12 mt-5">
                           <label for="conformpassword">Conform Password</label>
-                          <input type="password" class="form-control"  required minlength="6" id="conformpassword">
+                          <input type="text" class="form-control"  required minlength="6" id="conformpassword">
                         </div>
                         <button type="submit" class="btn btn-primary" id="passwordSubmit">Reset Password</button>
                       </form>
