--- a/gencode.html
+++ b/gencode.html
@@ -33,7 +33,7 @@ box-shadow: 0px 3px 36px -3px rgba(23, 50, 170, 0.75);
                         <label for="inputDob">Date of birth</label>
                         <input type="text" class="form-control" placeholder="dd/mm/yyyy" required maxlength="10" id="inputDob">
                       </div>
-                      <button type="submit" class="btn btn-primary" id="usersubmit">send 6 digits code</button>
+                      <button type="submit" class="btn btn-primary" id="usersubmit2">send 6 digits code</button>
                     </form>
                    <div class="col-12 mt-5">
                     <div class="row">
