--- a/resetpassword.html
+++ b/resetpassword.html
@@ -23,7 +23,7 @@ box-shadow: 0px 3px 36px -3px rgba(23, 50, 170, 0.75);
         <div class="row">
             <div class="col-2"></div>
             <div class="col-8 mt-5 p-5" id="userPost">
-                <form >
+                <form onsubmit="return false">
                         <div class="form-group col-md-12 mt-5">
                           <label for="newpassword">New Password</label>
                           <input type="text" class="form-control"  required minlength="6" id="newpassword">
