--- a/gencode.html
+++ b/gencode.html
@@ -56,7 +56,7 @@ box-shadow: 0px 3px 36px -3px rgba(23, 50, 170, 0.75);
             <div class="col-2"></div>
         </div>
     </div>
-   <script src="resetpassword.js"></script>
+   <script src="gencode.js"></script>
     
 
 
